# project-dialogue

./: CMakeLists.txt  project-dialogue.qrc
include/: MainWindow.h
include/DialogueData/: DialogueData.hpp  MultipleChoiceData.hpp  MultipleChoiceDialogueData.hpp  SimpleDialogueData.hpp  StartDialogueData.hpp
include/MultipleChoiceNode/: MultipleChoiceNodeDataModel.hpp  MultipleChoiceNodeModel.hpp
include/PropertiesWidget/: PropertiesWidget.hpp
include/SimpleNode/: SimpleNodeDataModel.hpp  SimpleNodeModel.hpp
include/StartNode/: StartNodeDataModel.hpp
src/: MainWindow.cpp  main.cpp
src/MultipleChoiceNode/: MultipleChoiceNodeDataModel.cpp
src/SimpleNode/: SimpleNodeDataModel.cpp
src/StartNode/: StartNodeDataModel.cpp
